--- a/Server/Restaurant.Server/Restaurant.Server.Api.csproj
+++ b/Server/Restaurant.Server/Restaurant.Server.Api.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="Autofac" Version="4.6.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="AutoMapper" Version="6.1.1" />
-    <PackageReference Include="IdentityServer4" Version="2.0.0-rc1" />
+    <PackageReference Include="IdentityServer4" Version="2.0.0-rc1-update1" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.0.0-rc1" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.0.0-rc1" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.0.0-rc1" />
