--- a/Server/Restaurant.Server/Restaurant.Server.Api.csproj
+++ b/Server/Restaurant.Server/Restaurant.Server.Api.csproj
@@ -21,7 +21,16 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.0.0-rc1" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.0.0-rc1" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.0.0-rc1" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="2.0.0-preview1-final" />
   </ItemGroup>
 
   <ItemGroup>
