--- a/src/Client/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
+++ b/src/Client/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extras.Moq" Version="4.2.0" />
     <PackageReference Include="AutoFixture" Version="4.0.0-rc1" />
+    <PackageReference Include="AutoFixture.Idioms" Version="4.0.0-rc1" />
     <PackageReference Include="AutoFixture.NUnit3" Version="4.0.0-rc1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="Mono.Cecil" Version="0.10.0-beta7" />
